<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_bluegrey_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/feedback_content_text_top"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/text_white_color"
            android:ems="10"
            android:gravity="top"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/feedback_hint_top"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/text_white_color"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/feedback_content_text_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/feedback_hint_bottom"
                android:paddingLeft="10dp"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:id="@+id/feedback_submit_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_btn_bg"
            android:text="@string/feedback_submit"
            android:textColor="@color/text_white_color" />

        <requestFocus />
    </LinearLayout>

</ScrollView>