<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_bluegrey_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/account_avatar_bg"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/img_about_background"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/account_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/default_avatar" />

            <TextView
                android:id="@+id/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/text_black_color"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_title_with_gap"
                android:textColor="@color/text_black_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/account_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:paddingEnd="@dimen/text_view_horizontal_gap"
                android:paddingLeft="@dimen/text_view_horizontal_gap"
                android:paddingRight="@dimen/text_view_horizontal_gap"
                android:paddingStart="@dimen/text_view_horizontal_gap"
                android:textColor="@color/text_black_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/change_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_btn_title_with_gap"
                android:textColor="@color/text_blue_color"
                android:textSize="15sp"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_title_with_gap"
                android:textColor="@color/text_black_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/account_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/text_view_horizontal_gap"
                android:paddingLeft="@dimen/text_view_horizontal_gap"
                android:paddingRight="@dimen/text_view_horizontal_gap"
                android:paddingStart="@dimen/text_view_horizontal_gap"
                android:text="*********"
                android:textColor="@color/text_black_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_btn_title_with_gap"
                android:textColor="@color/text_blue_color"
                android:textSize="15sp"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:visibility="invisible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_title_with_gap"
                android:textColor="@color/text_black_color"
                android:textSize="15sp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/text_view_horizontal_gap"
                android:paddingLeft="@dimen/text_view_horizontal_gap"
                android:paddingRight="@dimen/text_view_horizontal_gap"
                android:paddingStart="@dimen/text_view_horizontal_gap"
                android:text="@string/male"
                android:textColor="@color/text_black_color"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/male_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/checkbox_bg"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:paddingEnd="@dimen/text_view_horizontal_gap"
                android:paddingLeft="@dimen/text_view_horizontal_gap"
                android:paddingRight="@dimen/text_view_horizontal_gap"
                android:paddingStart="@dimen/text_view_horizontal_gap"
                android:text="@string/female"
                android:textColor="@color/text_black_color"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/female_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/checkbox_bg"
                android:contentDescription="@null" />
        </LinearLayout>

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/blue_btn_bg"
            android:text="@string/logout"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>